--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,28 +4,27 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "format %y.%-m.$i or auto"
+        description: "version"
         required: false
         type: string
+      latest:
+        description: "latest"
+        default: true
+        type: boolean
       prerelease:
         description: "pre release"
         default: false
         type: boolean
 
+permissions: write-all
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@main
-        with:
-          fetch-depth: 0
-
-      - name: Changelog
-        uses: Bullrich/generate-release-changelog@master
-        id: Changelog
-        env:
-          REPO: ${{ github.repository }}
 
       - name: Init Env
         run: |
@@ -40,12 +39,7 @@ jobs:
           if [ -n "${{ inputs.version }}" ]; then
             VERSION="${{ inputs.version }}"
           else
-            LATEST_TAG="$(curl -skL "https://api.github.com/repos/${{ github.repository }}/releases/latest" | jq -r ".tag_name" 2>/dev/null)"
-            if [[ -n "${LATEST_TAG}" && "`echo ${LATEST_TAG} | cut -d '.' -f 1,2`" = "`date +'%y.%-m.%-d'`" ]]; then  # format %y.%-m.$i
-              VERSION="`echo ${LATEST_TAG} | awk -F '.' '{$3=$3+1}1' OFS='.'`"
-            else
-              VERSION="`date +'%y.%-m.%-d'`"
-            fi
+            VERSION="`date +'%y.%m.%d'`.dev"
           fi
 
           if [ -n "${VERSION}" ]; then
@@ -57,24 +51,17 @@ jobs:
 
       - name: Build Configs Package
         run: |
-          zip -9 configs.zip -j *.yml VERSION
+          # Build Configs Package
+          zip -9j configs-${{ env.VERSION }}.zip *.yml VERSION
 
-      - name: Upload to Artifacts
-        if: success() && env.VERSION == ''
-        uses: actions/upload-artifact@v4
-        with:
-          name: configs
-          path: |
-            configs.zip
-
-      - name: Release
+      - name: Release Configs
         if: success() && env.VERSION != ''
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v1.14.0
         with:
+          name: ${{ env.VERSION }}
           tag: ${{ env.VERSION }}
+          makeLatest: ${{ inputs.latest }}
           prerelease: ${{ inputs.prerelease }}
           allowUpdates: true
-          body: |
-            ${{ steps.Changelog.outputs.changelog }}
           artifacts: |
-            configs.zip
+            configs-*.zip
