--- a/serials.yml
+++ b/serials.yml
@@ -11,7 +11,7 @@
   middle:
     - "RLR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "2"
 "DS224+":
   prefix:
@@ -19,7 +19,7 @@
   middle:
     - "WBR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "2"
 "DS423+":
   prefix:
@@ -27,7 +27,7 @@
   middle:
     - "VKR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "2"
 "DS718+":
   prefix:
@@ -49,7 +49,7 @@
   middle:
     - "TPR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "2"
 "DS918+":
   prefix:
@@ -71,7 +71,15 @@
   middle:
     - "TQR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
+  ports: "2"
+"DS925+":
+  prefix:
+    - "2520"
+  middle:
+    - "YHR"
+  suffix: "alpha"
+  macpre: "9009d0"
   ports: "2"
 "DS1019+":
   prefix:
@@ -93,7 +101,7 @@
   middle:
     - "TRR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "4"
 "DS1621+":
   prefix:
@@ -122,7 +130,7 @@
   middle:
     - "SKR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "4"
 "DS1823xs+":
   prefix:
@@ -130,7 +138,7 @@
   middle:
     - "V5R"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "4"
 "DS2419+":
   prefix:
@@ -159,7 +167,7 @@
   middle:
     - "SQR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "5"
 "DVA1622":
   prefix:
@@ -167,7 +175,7 @@
   middle:
     - "UBR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "1"
 "DVA3219":
   prefix:
@@ -182,7 +190,7 @@
   middle:
     - "SJR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "4"
 "FS2500":
   prefix:
@@ -204,7 +212,7 @@
   middle:
     - "RUR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "5"
 "RS422+":
   prefix:
@@ -212,7 +220,7 @@
   middle:
     - "TSR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "2"
 "RS820rp+":
   prefix:
@@ -241,7 +249,7 @@
   middle:
     - "V3R"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
 "RS2821RP+":
   prefix:
     - "20C0"
@@ -255,7 +263,7 @@
   middle:
     - "QNR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "4"
 "RS3621xs+":
   prefix:
@@ -270,7 +278,7 @@
   middle:
     - "ULR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "6"
 "SA3200d":
   prefix:
@@ -299,7 +307,7 @@
   middle:
     - "UMR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "7"
 "SA3410":
   prefix:
@@ -307,5 +315,5 @@
   middle:
     - "UMR"
   suffix: "alpha"
-  macpre: 9009d0
+  macpre: "9009d0"
   ports: "7"
