--- a/platforms.yml
+++ b/platforms.yml
@@ -5,7 +5,6 @@ synoinfo: &synoinfo
   support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_memory_limitation: "no"  # DVA3219
   support_led_brightness_adjustment: "no"
   support_leds_atmega1608: "no"
   support_leds_lp3943: "no"
@@ -29,14 +28,6 @@ productvers4: &productvers4
     kver: "4.4.302"
 
 productvers5: &productvers5
-  "7.1":
-    kpre: "7.1"
-    kver: "5.10.55"
-  "7.2":
-    kpre: "7.2"
-    kver: "5.10.55"
-
-productvers25: &productvers25
   "7.2":
     kpre: "7.2"
     kver: "5.10.55"
@@ -85,12 +76,15 @@ platforms:
   denverton:
     dt: false
     flags: ["movbe"]
-    synoinfo: *synoinfo
+    synoinfo:
+      <<: *synoinfo
+      support_memory_limitation: "no"
     productvers: *productvers4
   geminilake:
     dt: true
     noflags: ["x2apic"]
-    synoinfo: *synoinfo
+    synoinfo:
+      <<: *synoinfo
     productvers: *productvers4
   purley:
     dt: true
@@ -107,18 +101,20 @@ platforms:
     productvers: *productvers4
   r1000:
     dt: true
-    synoinfo: *synoinfo
+    synoinfo:
+      <<: *synoinfo
     productvers: *productvers4
   v1000:
     dt: true
-    synoinfo: *synoinfo
+    synoinfo:
+      <<: *synoinfo
     productvers: *productvers4
   v1000nk:
     dt: true
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
-    productvers: *productvers25
+    productvers: *productvers5
   epyc7002:
     dt: true
     synoinfo:
