--- a/serials.yml
+++ b/serials.yml
@@ -11,7 +11,7 @@
   middle:
     - "RLR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS224+":
   prefix:
@@ -19,7 +19,7 @@
   middle:
     - "WBR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS423+":
   prefix:
@@ -27,7 +27,7 @@
   middle:
     - "VKR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS718+":
   prefix:
@@ -49,7 +49,7 @@
   middle:
     - "TPR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS918+":
   prefix:
@@ -71,7 +71,7 @@
   middle:
     - "TQR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS925+":
   prefix:
@@ -79,7 +79,7 @@
   middle:
     - "YHR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS1019+":
   prefix:
@@ -101,8 +101,15 @@
   middle:
     - "TRR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "4"
+"DS1525+":
+  prefix:
+    - "2540"
+  middle:
+    - "YJR"
+  suffix: "alpha"
+  macpre: 9009d0
 "DS1621+":
   prefix:
     - "2080"
@@ -130,7 +137,7 @@
   middle:
     - "SKR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "4"
 "DS1823xs+":
   prefix:
@@ -138,7 +145,7 @@
   middle:
     - "V5R"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "4"
 "DS1825+":
   prefix:
@@ -146,7 +153,7 @@
   middle:
     - "WDR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "DS2419+":
   prefix:
@@ -175,7 +182,7 @@
   middle:
     - "SQR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "5"
 "DVA1622":
   prefix:
@@ -183,7 +190,7 @@
   middle:
     - "UBR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "1"
 "DVA3219":
   prefix:
@@ -198,7 +205,7 @@
   middle:
     - "SJR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "4"
 "FS2500":
   prefix:
@@ -220,7 +227,7 @@
   middle:
     - "RUR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "5"
 "RS422+":
   prefix:
@@ -228,7 +235,7 @@
   middle:
     - "TSR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "2"
 "RS820rp+":
   prefix:
@@ -257,7 +264,7 @@
   middle:
     - "V3R"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
 "RS2821RP+":
   prefix:
     - "20C0"
@@ -271,7 +278,7 @@
   middle:
     - "QNR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "4"
 "RS3621xs+":
   prefix:
@@ -286,7 +293,7 @@
   middle:
     - "ULR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "6"
 "SA3200d":
   prefix:
@@ -315,7 +322,7 @@
   middle:
     - "UMR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "7"
 "SA3410":
   prefix:
@@ -323,5 +330,5 @@
   middle:
     - "UMR"
   suffix: "alpha"
-  macpre: "9009d0"
+  macpre: 9009d0
   ports: "7"
