--- a/serials.yml
+++ b/serials.yml
@@ -4,7 +4,7 @@
   middle:
     - "PCN"
   suffix: "numeric"
-  ports: "1"
+  ports: 1
 "DS220+":
   prefix:
     - "2230"
@@ -12,7 +12,7 @@
     - "RLR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS224+":
   prefix:
     - "2350"
@@ -20,7 +20,7 @@
     - "WBR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS423+":
   prefix:
     - "2350"
@@ -28,21 +28,21 @@
     - "VKR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS718+":
   prefix:
     - "1880"
   middle:
     - "PEN"
   suffix: "numeric"
-  ports: "2"
+  ports: 2
 "DS720+":
   prefix:
     - "2010"
   middle:
     - "QWR"
   suffix: "alpha"
-  ports: "2"
+  ports: 2
 "DS723+":
   prefix:
     - "2230"
@@ -50,21 +50,21 @@
     - "TPR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS918+":
   prefix:
     - "1890"
   middle:
     - "PDN"
   suffix: "numeric"
-  ports: "2"
+  ports: 2
 "DS920+":
   prefix:
     - "2120"
   middle:
     - "SBR"
   suffix: "alpha"
-  ports: "2"
+  ports: 2
 "DS923+":
   prefix:
     - "2270"
@@ -72,7 +72,7 @@
     - "TQR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS925+":
   prefix:
     - "2520"
@@ -80,21 +80,21 @@
     - "YHR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS1019+":
   prefix:
     - "1880"
   middle:
     - "QXR"
   suffix: "numeric"
-  ports: "2"
+  ports: 2
 "DS1520+":
   prefix:
     - "2060"
   middle:
     - "RYR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DS1522+":
   prefix:
     - "2270"
@@ -102,7 +102,7 @@
     - "TRR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "4"
+  ports: 4
 "DS1525+":
   prefix:
     - "2540"
@@ -110,27 +110,28 @@
     - "YJR"
   suffix: "alpha"
   macpre: 9009d0
+  ports: 2
 "DS1621+":
   prefix:
     - "2080"
   middle:
     - "S7R"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DS1621xs+":
   prefix:
     - "2070"
   middle:
     - "RVR"
   suffix: "alpha"
-  ports: "3"
+  ports: 3
 "DS1819+":
   prefix:
     - "2050"
   middle:
     - "R5R"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DS1821+":
   prefix:
     - "2230"
@@ -138,7 +139,7 @@
     - "SKR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "4"
+  ports: 4
 "DS1823xs+":
   prefix:
     - "2280"
@@ -146,7 +147,7 @@
     - "V5R"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "4"
+  ports: 4
 "DS1825+":
   prefix:
     - "2540"
@@ -154,28 +155,28 @@
     - "WDR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "DS2419+":
   prefix:
     - "1880"
   middle:
     - "QZR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DS2422+":
   prefix:
     - "2180"
   middle:
     - "SLR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DS3617xs":
   prefix:
     - "1891"
   middle:
     - "ODN"
   suffix: "numeric"
-  ports: "4"
+  ports: 4
 "DS3622xs+":
   prefix:
     - "21A0"
@@ -183,7 +184,7 @@
     - "SQR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "5"
+  ports: 5
 "DVA1622":
   prefix:
     - "2280"
@@ -191,14 +192,14 @@
     - "UBR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "1"
+  ports: 1
 "DVA3219":
   prefix:
     - "1930"
   middle:
     - "RFR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "DVA3221":
   prefix:
     - "2280"
@@ -206,21 +207,21 @@
     - "SJR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "4"
+  ports: 4
 "FS2500":
   prefix:
     - "1960"
   middle:
     - "PSN"
   suffix: "numeric"
-  ports: "4"
+  ports: 4
 "FS6400":
   prefix:
     - "0000"
   middle:
     - "XXX"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "HD6500":
   prefix:
     - "21C0"
@@ -228,7 +229,7 @@
     - "RUR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "5"
+  ports: 5
 "RS422+":
   prefix:
     - "2210"
@@ -236,28 +237,28 @@
     - "TSR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "2"
+  ports: 2
 "RS820rp+":
   prefix:
     - "1960"
   middle:
     - "RAR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "RS1221+":
   prefix:
     - "20B0"
   middle:
     - "RWR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "RS1619xs+":
   prefix:
     - "1920"
   middle:
     - "QPR"
   suffix: "alpha"
-  ports: "4"
+  ports: 4
 "RS2423RP+":
   prefix:
     - "22B0"
@@ -265,13 +266,14 @@
     - "V3R"
   suffix: "alpha"
   macpre: 9009d0
+  ports: 3
 "RS2821RP+":
   prefix:
     - "20C0"
   middle:
     - "SMR"
   suffix: "alpha"
-  ports: "8"
+  ports: 4
 "RS3618xs":
   prefix:
     - "2320"
@@ -279,14 +281,14 @@
     - "QNR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "4"
+  ports: 4
 "RS3621xs+":
   prefix:
     - "20A0"
   middle:
     - "SZR"
   suffix: "alpha"
-  ports: "6"
+  ports: 6
 "RS4021xs+":
   prefix:
     - "2310"
@@ -294,28 +296,28 @@
     - "ULR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "6"
+  ports: 6
 "SA3200d":
   prefix:
     - "19A0"
   middle:
     - "S4R"
   suffix: "alpha"
-  ports: "6"
+  ports: 6
 "SA3400":
   prefix:
     - "1970"
   middle:
     - "RJR"
   suffix: "alpha"
-  ports: "6"
+  ports: 6
 "SA3600":
   prefix:
     - "2150"
   middle:
     - "RSR"
   suffix: "alpha"
-  ports: "6"
+  ports: 6
 "SA6400":
   prefix:
     - "2270"
@@ -323,7 +325,7 @@
     - "UMR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "7"
+  ports: 7
 "SA3410":
   prefix:
     - "2270"
@@ -331,4 +333,4 @@
     - "UMR"
   suffix: "alpha"
   macpre: 9009d0
-  ports: "7"
+  ports: 7
