--- a/platforms.yml
+++ b/platforms.yml
@@ -29,6 +29,8 @@ productvers4: &productvers4
     kver: "4.4.180"
   "7.2":
     kver: "4.4.302"
+  "7.3":
+    kver: "4.4.302"
 
 productvers5: &productvers5
   "7.1":
@@ -36,6 +38,9 @@ productvers5: &productvers5
     kver: "5.10.55"
   "7.2":
     kpre: "7.2"
+    kver: "5.10.55"
+  "7.3":
+    kpre: "7.3"
     kver: "5.10.55"
 
 platforms:
