--- a/platforms.yml
+++ b/platforms.yml
@@ -39,6 +39,9 @@ productvers5: &productvers5
   "7.2":
     kpre: "7.2"
     kver: "5.10.55"
+  "7.3":
+    kpre: "7.3"
+    kver: "5.10.55"
 
 platforms:
   apollolake:
