--- a/platforms.yml
+++ b/platforms.yml
@@ -43,6 +43,7 @@ productvers5: &productvers5
 platforms:
   apollolake:
     dt: false
+    ccnt: 8
     flags: ["movbe"]
     noflags: ["x2apic"]
     synoinfo:
@@ -51,10 +52,12 @@ platforms:
     productvers: *productvers4
   broadwell:
     dt: false
+    ccnt: 16
     synoinfo: *synoinfo
     productvers: *productvers4
   broadwellnk:
     dt: false
+    ccnt: 24
     synoinfo:
       <<: *synoinfo
       support_bde_internal_10g: "no"
@@ -62,6 +65,7 @@ platforms:
     productvers: *productvers4
   broadwellnkv2:
     dt: true
+    ccnt: 24
     synoinfo:
       <<: *synoinfo
       support_bde_internal_10g: "no"
@@ -71,6 +75,7 @@ platforms:
     productvers: *productvers4
   broadwellntbap:
     dt: false
+    ccnt: 24
     synoinfo:
       <<: *synoinfo
       support_bde_internal_10g: "no"
@@ -83,16 +88,19 @@ platforms:
     productvers: *productvers4
   denverton:
     dt: false
+    ccnt: 16
     flags: ["movbe"]
     synoinfo: *synoinfo
     productvers: *productvers4
   geminilake:
     dt: true
+    ccnt: 8
     noflags: ["x2apic"]
     synoinfo: *synoinfo
     productvers: *productvers4
   purley:
     dt: true
+    ccnt: 64
     noflags: ["x2apic"]
     synoinfo:
       <<: *synoinfo
@@ -106,20 +114,24 @@ platforms:
     productvers: *productvers4
   r1000:
     dt: true
+    ccnt: 16
     synoinfo: *synoinfo
     productvers: *productvers4
   v1000:
     dt: true
+    ccnt: 16
     synoinfo: *synoinfo
     productvers: *productvers4
   epyc7002:
     dt: true
+    ccnt: 24
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
     productvers: *productvers5
   geminilakenk:
     dt: true
+    ccnt: 8
     noflags: ["x2apic"]
     synoinfo:
       <<: *synoinfo
@@ -128,6 +140,7 @@ platforms:
     productvers: *productvers5
   r1000nk:
     dt: true
+    ccnt: 16
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
@@ -135,6 +148,7 @@ platforms:
     productvers: *productvers5
   v1000nk:
     dt: true
+    ccnt: 16
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
