--- a/platforms-essential.yml
+++ b/platforms-essential.yml
@@ -22,102 +22,28 @@ synoinfo: &synoinfo
   netif_seq: ""
   buzzeroffen: "0xffff"
 
-productvers4: &productvers4
-  "7.0":
-    kver: "4.4.180"
-  "7.1":
-    kver: "4.4.180"
-  "7.2":
-    kver: "4.4.302"
-
-productvers5: &productvers5
+productvers5n: &productvers5
   "7.1":
     kpre: "7.1"
     kver: "5.10.55"
   "7.2":
     kpre: "7.2"
     kver: "5.10.55"
+  "7.3":
+    kpre: "7.3"
+    kver: "5.10.55"
 
 platforms:
-  apollolake:
-    dt: false
-    flags: ["movbe"]
-    noflags: ["x2apic"]
-    synoinfo:
-      <<: *synoinfo
-      HddEnableDynamicPower: "no"
-    productvers: *productvers4
-  broadwell:
-    dt: false
-    synoinfo: *synoinfo
-    productvers: *productvers4
-  broadwellnk:
-    dt: false
-    synoinfo:
-      <<: *synoinfo
-      support_bde_internal_10g: "no"
-      supportsas: "no"
-    productvers: *productvers4
-  broadwellnkv2:
-    dt: true
-    synoinfo:
-      <<: *synoinfo
-      support_bde_internal_10g: "no"
-      supportsas: "no"
-      supportsas_v2_r1: "no"
-      support_multipath: "yes"
-    productvers: *productvers4
-  broadwellntbap:
-    dt: false
-    synoinfo:
-      <<: *synoinfo
-      support_bde_internal_10g: "no"
-      supportsas: "no"
-      supportbootinst: "no"
-      no_disk_system: "no"
-      support_auto_install: "no"
-      support_install_only_dev: "no"
-      required_system_disk_number: "0"
-    productvers: *productvers4
-  denverton:
-    dt: false
-    flags: ["movbe"]
-    synoinfo: *synoinfo
-    productvers: *productvers4
-  geminilake:
-    dt: true
-    noflags: ["x2apic"]
-    synoinfo: *synoinfo
-    productvers: *productvers4
-  purley:
-    dt: true
-    noflags: ["x2apic"]
-    synoinfo:
-      <<: *synoinfo
-      supportsas: "no"
-      supportsas_v2_r1: "no"
-      support_multipath: "yes"
-      support_install_only_dev: "no"
-      isolated_disk_system: "no"
-      required_system_disk_number: "0"
-      internal_disk_without_led_mask: "no"
-    productvers: *productvers4
-  r1000:
-    dt: true
-    synoinfo: *synoinfo
-    productvers: *productvers4
-  v1000:
-    dt: true
-    synoinfo: *synoinfo
-    productvers: *productvers4
   epyc7002:
     dt: true
+    ccnt: "24"
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
     productvers: *productvers5
   geminilakenk:
     dt: true
+    ccnt: "8"
     noflags: ["x2apic"]
     synoinfo:
       <<: *synoinfo
@@ -126,6 +52,7 @@ platforms:
     productvers: *productvers5
   r1000nk:
     dt: true
+    ccnt: "16"
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
@@ -133,6 +60,7 @@ platforms:
     productvers: *productvers5
   v1000nk:
     dt: true
+    ccnt: "16"
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
